# ucfp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  REPORT.md  USAGE.md  commit-message-docs.txt  container.toml  opencode.jsonc  package-lock.json  run-ci-local.sh  server.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  container.yml  deploy-web.yml  rust.yml  web.yml
benches/: ann_bench.rs  canonicalize_bench.rs  concurrency_bench.rs  end_to_end.rs  index.rs  index_bench.rs  ingest_bench.rs  matcher_bench.rs  perceptual_bench.rs  pipeline.rs  scalability_bench.rs  semantic_bench.rs  storage_bench.rs
benches/common/: mod.rs
benches/fixtures/: sample_long_text.txt
config/: development.yaml  example.yaml  production.yaml
crates/canonical/: Cargo.toml
crates/canonical/benches/: canonicalize_bench.rs
crates/canonical/doc/: canonical.md
crates/canonical/examples/: big_text.txt  demo.rs  helpers.rs
crates/canonical/src/: config.rs  document.rs  error.rs  hash.rs  lib.rs  pipeline.rs  token.rs  whitespace.rs
crates/canonical/tests/: corpus.rs
crates/index/: Cargo.toml
crates/index/benches/: index_bench.rs
crates/index/doc/: README.md  index.md
crates/index/examples/: index_demo.rs
crates/index/src/: ann.rs  backend.rs  lib.rs  query.rs
crates/index/src/backend/: redb.rs
crates/ingest/: Cargo.toml
crates/ingest/doc/: ingest.md
crates/ingest/examples/: batch_ingest.rs  ingest_demo.rs  size_limit_demo.rs
crates/ingest/src/: config.rs  error.rs  lib.rs  metadata.rs  payload.rs  types.rs
crates/matcher/: Cargo.toml
crates/matcher/doc/: matcher.md
crates/matcher/examples/: match_demo.rs
crates/matcher/src/: demo_utils.rs  engine.rs  lib.rs  metrics.rs  types.rs
crates/matcher/src/engine/: tests.rs
crates/perceptual/: Cargo.toml
crates/perceptual/doc/: perceptual.md
crates/perceptual/examples/: fingerprint_demo.rs
crates/perceptual/src/: config.rs  fingerprint.rs  lib.rs  minhash.rs  shingles.rs
crates/semantic/: Cargo.toml
crates/semantic/doc/: semantic.md
crates/semantic/examples/: api_embed.rs  batch_embed.rs  download.rs  embed.rs
crates/semantic/src/: api.rs  assets.rs  cache.rs  config.rs  error.rs  lib.rs  normalize.rs  onnx.rs  retry.rs  serde_millis.rs  stub.rs  types.rs
crates/semantic/src/resilience/: circuit_breaker.rs  mod.rs  rate_limit.rs  retry.rs
crates/server/: API.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  README.md  server.yaml.example
crates/server/examples/: api_client.rs
crates/server/src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  server.rs  state.rs
crates/server/src/routes/: health.rs  index.rs  matching.rs  mod.rs  process.rs
crates/server/tests/: api_integration_tests.rs
crates/ufp_canonical/: Cargo.toml  ufp_canonical.md
crates/ufp_canonical/benches/: canonicalize_bench.rs
crates/ufp_canonical/doc/: ufp_canonical.md
crates/ufp_canonical/examples/: demo.rs  helpers.rs
crates/ufp_canonical/src/: config.rs  lib.rs  pipeline.rs  token.rs
crates/ufp_canonical/tests/: corpus.rs
crates/ufp_index/: Cargo.toml  README.md
crates/ufp_index/benches/: index_bench.rs
crates/ufp_index/doc/: README.md  ufp_index.md
crates/ufp_index/examples/: index_demo.rs
crates/ufp_index/src/: backend.rs  lib.rs  query.rs
crates/ufp_ingest/: Cargo.toml  ucfp_ingest.md
crates/ufp_ingest/doc/: ucfp_ingest.md
crates/ufp_ingest/examples/: batch_ingest.rs  demo.rs  ingest_demo.rs  size_limit_demo.rs
crates/ufp_ingest/src/: config.rs  error.rs  lib.rs  metadata.rs  payload.rs  types.rs
crates/ufp_match/: Cargo.toml
crates/ufp_match/doc/: ufp_match.md
crates/ufp_match/examples/: match_demo.rs
crates/ufp_match/src/: demo_utils.rs  engine.rs  lib.rs  metrics.rs  types.rs
crates/ufp_match/src/engine/: tests.rs
crates/ufp_perceptual/: Cargo.toml
crates/ufp_perceptual/benches/: perceptual_bench.rs
crates/ufp_perceptual/doc/: ufp_perceptual.md
crates/ufp_perceptual/examples/: fingerprint_demo.rs
crates/ufp_perceptual/src/: config.rs  lib.rs  minhash.rs  shingles.rs
crates/ufp_semantic/: Cargo.toml
crates/ufp_semantic/doc/: ufp_semantic.md
crates/ufp_semantic/examples/: api_embed.rs  batch_embed.rs  embed.rs
crates/ufp_semantic/src/: api.rs  assets.rs  cache.rs  config.rs  error.rs  lib.rs  types.rs
docs/: ARCHITECTURE.md  DEPLOY.md  index.html  script.js  styles.css
examples/: full_pipeline.rs  pipeline_metrics.rs  quick_bench.rs  test_chunking.rs  test_sequence_length.rs  test_timing.rs  test_truncate.rs
scripts/: install-services.sh  redb-snapshot.sh  ucfp-server-start.sh  ucfp-server.service  ucfp-tunnel-start.sh  ucfp-tunnel.service
src/: config.rs  core.rs  corpus.rs  error.rs  ingest.rs  lib.rs  main.rs  matcher.rs  server.rs
src/core/: mod.rs
src/index/: embedded.rs  mod.rs
src/index/embedded/: bm25.rs  mod.rs
src/matcher/: mod.rs
src/modality/: audio.rs  image.rs  mod.rs  text.rs
src/rerank/: mod.rs
src/server/: algorithms_manifest.rs  apikey.rs  dto.rs  error.rs  extractors.rs  handlers.rs  inputs_cache.rs  mod.rs  ratelimit.rs  tests.rs  usage.rs
tests/: concurrency_tests.rs  determinism.rs  error_handling.rs  full_pipeline.rs  performance_tests.rs  pipeline_integration.rs  server_api_integration.rs  stress_tests.rs
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  wrangler.toml
web/migrations/: 0001_init.sql
web/src/: App.tsx  app.css  app.d.ts  app.html  hooks.client.ts  hooks.server.ts
web/src/api/: client.ts  useClient.ts
web/src/components/: CodeExample.css  CodeExample.tsx  ConfigPanel.tsx  Features.css  Features.tsx  Footer.css  Footer.tsx  Hero.css  Hero.tsx  InteractivePipelineDemo.tsx  Modalities.css  Modalities.tsx  Navigation.css  Navigation.tsx  Performance.css  Performance.tsx  Pipeline.css  Pipeline.tsx  ScrollAnimations.tsx  ServerApi.css  ServerApi.tsx  VisualEffects.tsx
web/src/context/: ConfigContext.tsx
web/src/lib/: seo.ts
web/static/: robots.txt
(+156 files in other folders)
