[workspace]
resolver = "3"
members = []

# Rebuild in progress. New member crates land here per docs/ARCHITECTURE.md:
# planned: ucfp-core, ucfp-index, ucfp-ingest, ucfp-matcher, ucfp-server.

[workspace.package]
version       = "0.1.0"
edition       = "2024"
rust-version  = "1.85"
license       = "Apache-2.0"
repository    = "https://github.com/bravo1goingdark/ucfp"

# Dependency pinning — sources of truth match docs/ARCHITECTURE.md §1.
# Adding a member crate? Reach for these workspace deps before pinning your own.
[workspace.dependencies]
axum                       = "0.8"
tokio                      = { version = "1.47", features = ["rt-multi-thread", "macros", "signal"] }
tower                      = { version = "0.5", features = ["limit", "timeout"] }
tower-http                 = { version = "0.6", features = ["validate-request", "limit", "trace", "timeout"] }
redb                       = "3.0"
hnsw_rs                    = "0.3"
pulp                       = "0.22"
roaring                    = "0.11"
rkyv                       = "0.8"
bytemuck                   = { version = "1.25", features = ["derive"] }
bytes                      = "1.10"
rayon                      = "1.12"
tracing                    = "0.1"
tracing-subscriber         = { version = "0.3.22", features = ["json", "env-filter"] }
metrics                    = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
serde                      = { version = "1.0", features = ["derive"] }
serde_json                 = "1.0"
thiserror                  = "2.0"
async-trait                = "0.1"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"

[profile.bench]
opt-level     = 3
lto           = "fat"
codegen-units = 1
debug         = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
debug     = true
