[package]
name         = "ucfp"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "Apache-2.0"
repository   = "https://github.com/bravo1goingdark/ucfp"
description  = "Universal Content Fingerprinting integrator: ingest, index, match, store"
readme       = "README.md"
keywords     = ["fingerprint", "deduplication", "search", "ann", "lsh"]
categories   = ["database", "multimedia"]

[features]
default = ["embedded", "server", "audio", "image", "text"]

# Storage + ANN. The day-one backend per docs/ARCHITECTURE.md §2.
# Pulls a slim tokio for spawn_blocking on the redb tx; the full server
# runtime stays gated under `server`.
embedded = [
    "dep:redb", "dep:hnsw_rs", "dep:pulp", "dep:roaring", "dep:rkyv", "dep:rayon",
    "dep:tokio",
]

# HTTP server binary. Disable for library-only consumers.
server = [
    "dep:axum", "dep:tokio", "dep:tower", "dep:tower-http",
    "dep:tracing-subscriber", "dep:metrics", "dep:metrics-exporter-prometheus",
    "dep:subtle",
]

# Per-modality SDKs. Each pulls only its own crate; off-by-default for slim builds.
audio = ["dep:audiofp"]
image = ["dep:imgfprint"]
text  = ["dep:txtfp"]

# ── Per-modality fine-grained algorithm gates ───────────────────────────
# audiofp has no per-algorithm features upstream; these gate ucfp wrapper code only.
audio-wang        = ["audio"]
audio-panako      = ["audio"]
audio-haitsma     = ["audio"]
audio-streaming   = ["audio"]
audio-neural      = ["audio", "audiofp/neural"]
audio-watermark   = ["audio", "audiofp/watermark"]

image-perceptual  = ["image"]                       # PHash / DHash / AHash separate routes
image-semantic    = ["image", "imgfprint/local-embedding"]

text-simhash         = ["text"]
text-lsh             = ["text"]
text-tlsh            = ["text", "txtfp/tlsh"]
text-streaming       = ["text"]
text-security        = ["text", "txtfp/security"]
text-cjk-japanese    = ["text", "txtfp/cjk-japanese"]
text-cjk-korean      = ["text", "txtfp/cjk-korean"]
text-markup          = ["text", "txtfp/markup"]
text-pdf             = ["text", "txtfp/pdf"]
text-semantic        = ["text", "txtfp/semantic"]   # legacy alias
text-semantic-local  = ["text", "txtfp/semantic"]
text-semantic-openai = ["text-semantic-local", "txtfp/openai"]
text-semantic-voyage = ["text-semantic-local", "txtfp/voyage"]
text-semantic-cohere = ["text-semantic-local", "txtfp/cohere"]

# ── Multi-tenant cloud / SaaS plumbing ──────────────────────────────────
# Pluggable ApiKeyLookup / TenantRateLimiter / UsageSink webhook impls.
multi-tenant = ["dep:reqwest"]

# Multipart upload routes for streaming ingest. axum/multipart is heavy so
# self-hosters who only want single-shot ingest can keep it off.
multipart    = ["server", "axum/multipart"]

# Existing graduations (kept).
qdrant = ["dep:qdrant-client"]
rerank = ["dep:ort"]

# Convenience umbrella — what `cargo test --features full` and the cloud
# Container build use. Excludes truly heavy `qdrant` and `rerank` which are
# alternative backends, not additive features.
full = [
    "embedded", "server", "multi-tenant", "multipart",
    "audio-wang", "audio-panako", "audio-haitsma", "audio-streaming",
    "audio-neural", "audio-watermark",
    "image-perceptual", "image-semantic",
    "text-simhash", "text-lsh", "text-tlsh", "text-streaming", "text-security",
    "text-cjk-japanese", "text-cjk-korean", "text-markup", "text-pdf",
    "text-semantic-local", "text-semantic-openai", "text-semantic-voyage", "text-semantic-cohere",
]

[dependencies]
# ── Core, always on ─────────────────────────────────────────────────────
bytemuck    = { version = "1.25", features = ["derive"] }
bytes       = "1.10"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "2.0"
tracing     = "0.1"
async-trait = "0.1"

# ── Per-modality SDKs (feature-gated) ───────────────────────────────────
audiofp   = { version = "0.3", optional = true }
imgfprint = { version = "0.4.1", optional = true }
txtfp     = { version = "0.2", optional = true, default-features = false, features = ["std", "minhash", "simhash", "lsh", "serde", "parallel"] }

# ── Embedded backend (feature-gated) ────────────────────────────────────
redb    = { version = "3.0", optional = true }
hnsw_rs = { version = "0.3", optional = true }
pulp    = { version = "0.22", optional = true }
roaring = { version = "0.11", optional = true }
rkyv    = { version = "0.8",  optional = true }
rayon   = { version = "1.12", optional = true }

# ── Server (feature-gated) ──────────────────────────────────────────────
axum                        = { version = "0.8", optional = true }
tokio                       = { version = "1.47", features = ["rt-multi-thread", "macros", "signal", "rt"], optional = true }
tower                       = { version = "0.5", features = ["limit", "timeout"], optional = true }
tower-http                  = { version = "0.6", features = ["limit", "trace", "timeout"], optional = true }
tracing-subscriber          = { version = "0.3.22", features = ["json", "env-filter"], optional = true }
metrics                     = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.18", default-features = false, optional = true }
subtle                      = { version = "2.6", optional = true }

# ── Optional graduations ────────────────────────────────────────────────
qdrant-client = { version = "1", optional = true }
ort           = { version = "=2.0.0-rc.10", optional = true }

# Webhook-based multi-tenant lookups (ApiKeyLookup / RateLimiter / UsageSink).
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
tempfile        = "3"
tokio           = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tower           = { version = "0.5", features = ["util"] }
http-body-util  = "0.1"
serde_json      = "1.0"
# For synthesizing test PNGs in HTTP integration tests. imgfprint already
# pulls `image` transitively, so this is a free build-graph addition.
image           = { version = "0.25", default-features = false, features = ["png"] }

[[bin]]
name              = "ucfp"
path              = "src/bin/ucfp.rs"
required-features = ["server", "embedded"]

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"

[profile.bench]
opt-level     = 3
lto           = "fat"
codegen-units = 1
debug         = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
debug     = true
