[package]
name = "content-canonical"
version = "0.1.0"
edition = "2021"
authors = ["UCFP Developers <kumarashutosh34169@gmail.com>"]
license = "Apache-2.0"
description = "Content canonicalization and text normalization library"
repository = "https://github.com/bravo1goingdark/ucfp"
documentation = "https://docs.rs/content-canonical"
keywords = ["canonical", "text", "normalization", "unicode", "fingerprinting"]
categories = ["text-processing", "encoding"]

[lib]
name = "canonical"

[dependencies]
unicode-normalization = "0.1"
unicode_categories = "0.1"
unicode-segmentation = "1.11"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
