[package]
name = "index"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UCFP backend-agnostic vector and fingerprint index"
authors = ["UCFP Developers <kumarashutosh34169@gmail.com>"]
repository = "https://github.com/bravo1goingdark/ufcp"

[features]
default = ["backend-rocksdb"]
backend-rocksdb = ["rocksdb"]

[dependencies]
rocksdb = { version = "0.24.0", features = ["lz4", "zstd", "mt_static"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
zstd = "0.13"
ndarray = "0.17"
log = "0.4"
thiserror = "2.0.17"
anyhow = "1.0.100"
hashbrown = "0.16.0"
# ANN is always available but runtime configurable
hnsw_rs = "0.3.1"

[dev-dependencies]
tempfile = "3.13"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "index_bench"
harness = false
