[package]
name = "matcher"
version = "0.1.0"
edition = "2021"
description = "UCFP matching layer for semantic and perceptual search over indexed fingerprints"
license = "Apache-2.0"

[dependencies]
ingest = { path = "../ingest" }
canonical = { path = "../canonical" }
perceptual = { path = "../perceptual" }
semantic = { path = "../semantic" }
index = { path = "../index" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
