[package]
name = "matcher"
version = "0.1.0"
edition = "2021"
description = "UCFP matching layer for semantic and perceptual search over indexed fingerprints"
license = "Apache-2.0"
repository = "https://github.com/bravo1goingdark/ucfp"

[dependencies]
ingest = { package = "content-ingest", version = "0.1.0", path = "../ingest" }
canonical = { package = "content-canonical", version = "0.1.0", path = "../canonical" }
perceptual = { version = "0.1.0", path = "../perceptual" }
semantic = { version = "0.1.0", path = "../semantic" }
index = { version = "0.1.0", path = "../index" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
