[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["UCFP Team"]
description = "HTTP REST API server for UCFP content fingerprinting"
repository = "https://github.com/bravo1goingdark/ucfp"

[dependencies]
# Core UCFP crates
ucfp = { version = "0.1.0", path = "../.." }
ingest = { package = "content-ingest", version = "0.1.0", path = "../ingest" }
canonical = { package = "content-canonical", version = "0.1.0", path = "../canonical" }
perceptual = { version = "0.1.0", path = "../perceptual" }
semantic = { version = "0.1.0", path = "../semantic" }
index = { version = "0.1.0", path = "../index" }
matcher = { version = "0.1.0", path = "../matcher" }

# Server framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.42", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["compression-full", "timeout", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration and environment
config = "0.15"
dotenvy = "0.15"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics and monitoring
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Authentication and security
headers = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"
dashmap = "6.1"
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
