[package]
name = "ufp_canonical"
version = "0.1.0"
edition = "2021"


[dependencies]
unicode-normalization = "0.1"
unicode_categories = "0.1"
unicode-segmentation = "1.11"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "canonicalize_bench"
harness = false
