[package]
name = "ufp_index"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UCFP backend-agnostic vector and fingerprint index"
authors = ["UCFP Developers <kumarashutosh34169@gmail.com>"]
repository = "https://github.com/bravo1goingdark/ufcp"

[features]
default = ["backend-rocksdb"]
backend-rocksdb = ["rocksdb"]
backend-redis = ["redis"]
backend-postgres = ["postgres"]
backend-mongo = ["mongodb"]
backend-redb = ["redb"]
backend-sled = ["sled"]
plugin-loader = ["libloading"]

[dependencies]
rocksdb = { version = "0.24.0", features = ["lz4", "zstd", "mt_static"], optional = true }
redis = { version = "0.24.0", optional = true }
postgres = { version = "0.19.7", optional = true }
mongodb = { version = "2.8.2", default-features = false, features = ["sync"], optional = true }
redb = { version = "1.5.0", optional = true }
sled = { version = "0.34.7", optional = true }
libloading = { version = "0.8.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
zstd = "0.13"
ndarray = "0.17"
log = "0.4"
thiserror = "2.0.17"
anyhow = "1.0.100"
hashbrown = "0.16.0"

[dev-dependencies]
tempfile = "3.13"
