[package]
name = "ufp_match"
version = "0.1.0"
edition = "2021"
description = "UCFP matching layer for semantic and perceptual search over indexed fingerprints"
license = "Apache-2.0"

[dependencies]
ufp_ingest = { path = "../ufp_ingest" }
ufp_canonical = { path = "../ufp_canonical" }
ufp_perceptual = { path = "../ufp_perceptual" }
ufp_semantic = { path = "../ufp_semantic" }
ufp_index = { path = "../ufp_index" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
