[package]
name = "ufp_semantic"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UCFP semantic fingerprinting (embedding generation) crate"
authors = ["UCFP Developers <kumarashutosh34169@gmail.com>"]
repository = "https://github.com/bravo1goingdark/ucfp"


[dependencies]
# --- Core runtime dependencies ---
onnxruntime = "0.0.14"
tokenizers = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.65"
fxhash = "0.2"
once_cell = "1.19"
ureq = { version = "2.12", default-features = true }
lru = "0.12"

[dev-dependencies]
anyhow = "1"
